{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 8,
  "lineage": "98151010-2755-8af0-704f-b373d91ae9be",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-066f41adad7527ef6",
            "arn": "arn:aws:ec2:eu-west-2:664576603111:instance/i-0fd14e67e1d1fc250",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdcz",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01785f6909832a705",
                "volume_size": 22,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd14e67e1d1fc250",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bytejunkie",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b46d65ad31f0409c",
            "private_dns": "ip-10-0-1-39.eu-west-2.compute.internal",
            "private_ip": "10.0.1.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-062d102990bf2dc57",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-083e6c0cd5304c08d",
            "tags": {
              "Created_With": "CloudSkiff",
              "Name": "swarm-instance",
              "ProjectName": "Swarm-Example"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04899764f014419ba"
            ]
          },
          "dependencies": [
            "aws_subnet.swarm-subnet",
            "aws_vpc.swarm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "swarm-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0827137f7026498ac",
            "owner_id": "664576603111",
            "tags": {
              "Created_With": "CloudSkiff",
              "Name": "swarm gateway",
              "ProjectName": "Swarm-Example"
            },
            "vpc_id": "vpc-0687675520d00cfde"
          },
          "dependencies": [
            "aws_vpc.swarm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "swarm-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05c919d1935439404",
            "owner_id": "664576603111",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0827137f7026498ac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Created_With": "CloudSkiff",
              "Name": "swarm-route-table",
              "ProjectName": "Swarm-Example"
            },
            "vpc_id": "vpc-0687675520d00cfde"
          },
          "dependencies": [
            "aws_internet_gateway.swarm-gw",
            "aws_vpc.swarm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093ade4b107363254",
            "route_table_id": "rtb-05c919d1935439404",
            "subnet_id": "subnet-083e6c0cd5304c08d"
          },
          "dependencies": [
            "aws_internet_gateway.swarm-gw",
            "aws_route_table.swarm-rt",
            "aws_subnet.swarm-subnet",
            "aws_vpc.swarm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "swarm-security-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:664576603111:security-group/sg-0c0034980539b0dbf",
            "description": "Allow docker swarm traffic",
            "egress": [],
            "id": "sg-0c0034980539b0dbf",
            "ingress": [],
            "name": "swarm_sg",
            "name_prefix": null,
            "owner_id": "664576603111",
            "revoke_rules_on_delete": false,
            "tags": {
              "Created_With": "CloudSkiff",
              "Name": "allow_swarm_traffic",
              "ProjectName": "Swarm-Example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0687675520d00cfde"
          },
          "dependencies": [
            "aws_vpc.swarm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "swarm-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:664576603111:subnet/subnet-083e6c0cd5304c08d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-083e6c0cd5304c08d",
            "map_public_ip_on_launch": false,
            "owner_id": "664576603111",
            "tags": {
              "Created_With": "CloudSkiff",
              "Name": "swarm-subnet",
              "ProjectName": "Swarm-Example"
            },
            "vpc_id": "vpc-0687675520d00cfde"
          },
          "dependencies": [
            "aws_vpc.swarm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "swarm-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:664576603111:vpc/vpc-0687675520d00cfde",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f6c2d72659b59cf1",
            "default_route_table_id": "rtb-082d347b46f806bc2",
            "default_security_group_id": "sg-04899764f014419ba",
            "dhcp_options_id": "dopt-db7b14b3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0687675520d00cfde",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-082d347b46f806bc2",
            "owner_id": "664576603111",
            "tags": {
              "Created_With": "CloudSkiff",
              "Name": "swarm-vpc",
              "ProjectName": "Swarm-Example"
            }
          }
        }
      ]
    }
  ]
}